<resources>
    <string name="app_name">CinemaGOLD</string>
    <string name="title_activity_main">ActivityMain</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="navigation_drawer_close">Previous</string>

    <string name="navigation_drawer_open">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="preview_info_director">Director:</string>
    <string name="preview_info_length">Duración:</string>
    <string name="search">Buscar</string>
    <string name="name">Nombre</string>
    <string name="subtitles">Subtítulos</string>
    <string name="language">Idioma</string>
    <string name="disable">Desactivar</string>
    <string name="forced">Forzado</string>
    <string name="title_activity_authentication">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="LOGIN">INGRESAR</string>

    <!-- These don't change in any language -->
    <string name="brand_cinema">Cinema</string>
    <string name="brand_GOLD">GOLD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Registro</string>
    <string name="Login">Ingresar</string>
    <string name="lastname">Apellidos</string>
    <string name="phone_number">Teléfono</string>
    <string name="country">País</string>
    <string name="REGISTER">REGISTRAR</string>
    <string name="confirm_email_message">Se ha enviado un correo de confirmación a tu cuenta de correo</string>
    <string name="continue_string">Continuar</string>
    <string name="profiles">Perfiles</string>
    <string name="KIDS">NIÑOS</string>
    <string name="SAVE">GUARDAR</string>
    <string name="edit_profiles">Editar perfiles</string>
    <string name="help">Ayuda</string>
    <string name="pick_an_option">Escoge una opción</string>
    <string name="premieres">Estrenos</string>
    <string name="recent">Recientes</string>
    <string name="delete_profile">Eliminar perfil</string>
    <string name="delete_all">Eliminar todos</string>
    <string name="notifications">Notificaciones</string>

    <string name="confirmation_delete_device">¿Seguro que desea eliminar este dispositivo?</string>
    <string name="confirmation_delete_devices">¿Seguro que desea eliminar todos los dispositivos?</string>
    <string name="NEW_SEASON">NUEVA TEMPORADA</string>
    <string name="NEW_SEASON__VERTICAL">N\nU\nE\nV\nA\n\nT\nE\nM\nP\nO\nR\nA\nD\nA</string>
    <string name="home">Inicio</string>
    <string name="movies">Películas</string>
    <string name="tv_shows">Programas de TV</string>
    <string name="devices">Dispositivos</string>
    <string name="account">Cuenta</string>
    <string name="payments">Pagos</string>
    <string name="logout">Cerrar sesión</string>
    <string name="payment_options">Opciones de pago</string>
    <string name="seller_code">Código de vendedor</string>
</resources>
